// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtCover 1`] = `
.c0 {
  border-radius: 10px;
  width: 32px;
  height: 32px;
  -o-object-fit: cover;
  object-fit: cover;
  margin-right: 16px;
  box-shadow: inset 1px 1px 5px -4px #ababab,5px 5px 5px 1px #dddddd;
  -webkit-box-shadow: inset 1px 1px 5px -4px #ababab,2px 8px 3px 1px #ddd;
  -moz-box-shadow: inset 1px 1px 5px -4px #ababab,5px 5px 5px 1px #dddddd;
  -o-box-shadow: inset 1px 1px 5px -4px #ababab,5px 5px 5px 1px #dddddd;
}

<div
  className="c0"
/>
`;

exports[`ItemInfo 1`] = `
<div
  className=""
/>
`;

exports[`ListItem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 10px 20px;
  border-top: 1px solid #fff;
  cursor: pointer;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  overflow: auto;
  background-color: #f6f6f6;
  background-image: linear-gradient(315deg,#f6f6f6 0%,#e9e9e9 74%);
}

.c0:hover {
  box-shadow: inset 1px 1px 52px -24px #ababab,5px 5px 5px 1px #dddddd;
  -webkit-box-shadow: inset 1px 1px 52px -24px #ababab,5px 5px 5px 1px #dddddd;
  -moz-box-shadow: inset 1px 1px 52px -24px #ababab,5px 5px 5px 1px #dddddd;
  -o-box-shadow: inset 1px 1px 52px -24px #ababab,5px 5px 5px 1px #dddddd;
  background-color: #d9d9d9;
  background-image: linear-gradient(315deg,#d9d9d9 0%,#f6f2f2 74%);
}

<div
  className="c0"
/>
`;

exports[`Subtitle 1`] = `
.c0 {
  font-size: 10px;
  color: #59657c;
}

<div
  className="c0"
/>
`;

exports[`Title 1`] = `
.c0 {
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  color: #46505f;
}

<div
  className="c0"
/>
`;
